--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TheCrazyThings – Best Mobile Apps</title>
   <link rel="stylesheet" href="style.css" />
+  <meta name="robots" content="index,follow" />
 </head>
 <body>
-  <header>
+  <header class="site-header">
     <h1>We Create the Best Mobile Apps</h1>
     <p>Innovative iOS apps built by TheCrazyThings</p>
     <div class="header-buttons">
-      <a href="/app-ads.txt" class="button">Download ads.txt</a>
+      <!-- Keep ads.txt accessible but hidden from users -->
+      <a href="/app-ads.txt" class="sr-only" aria-hidden="true" tabindex="-1" rel="nofollow">app-ads.txt</a>
       <a href="mailto:moukarrameabdellah@gmail.com" class="button">Contact Us</a>
     </div>
   </header>
@@ -19,16 +21,57 @@
   <section class="apps">
     <h2>Our Apps</h2>
     <div class="apps-grid">
-      <div class="app-card">
-        <h3>Scan Max</h3>
-        <p>PDF Document Scanner for iPhone. Scan, save, and share with ease.</p>
-        <a class="download" href="https://apps.apple.com/us/app/scan-max-pdf-document-scanner/id6745792574" target="_blank">App Store</a>
-      </div>
-      <div class="app-card">
-        <h3>Universal Remote Control</h3>
-        <p>Control your smart TVs from one simple app.</p>
-        <span class="coming-soon">Coming Soon</span>
-      </div>
+
+      <!-- HomeDecor AI Interior Design -->
+      <article class="app-card">
+        <img src="/assets/apps/homedecor-ai.jpg" alt="HomeDecor AI Interior Design app icon" class="app-thumb" loading="lazy">
+        <div class="app-body">
+          <h3>HomeDecor AI – Interior Design</h3>
+          <p>AI-powered interior design & room makeovers. Visualize renovations in seconds.</p>
+          <a class="download" href="https://apps.apple.com/us/app/homedecor-ai-interior-design/id6752501772" target="_blank" rel="noopener">App Store</a>
+        </div>
+      </article>
+
+      <!-- TV Smart Remote Control -->
+      <article class="app-card">
+        <img src="/assets/apps/tv-remote.jpg" alt="TV Smart Remote Control app icon" class="app-thumb" loading="lazy">
+        <div class="app-body">
+          <h3>TV Smart Remote Control</h3>
+          <p>Control Roku, webOS, Tizen, Android TV & more from one simple remote.</p>
+          <a class="download" href="https://apps.apple.com/us/app/tv-smart-remote-control/id6747010515" target="_blank" rel="noopener">App Store</a>
+        </div>
+      </article>
+
+      <!-- Manga Reader Webtoon -->
+      <article class="app-card">
+        <img src="/assets/apps/manga-reader.jpg" alt="Manga Reader Webtoon app icon" class="app-thumb" loading="lazy">
+        <div class="app-body">
+          <h3>Manga Reader – Webtoon</h3>
+          <p>Fast, clean manga reader with favorites, history, categories, and smart search.</p>
+          <a class="download" href="https://apps.apple.com/us/app/manga-reader-webtoon/id6747201787" target="_blank" rel="noopener">App Store</a>
+        </div>
+      </article>
+
+      <!-- Scan Max -->
+      <article class="app-card">
+        <img src="/assets/apps/scan-max.jpg" alt="Scan Max – PDF Document Scanner app icon" class="app-thumb" loading="lazy">
+        <div class="app-body">
+          <h3>Scan Max – PDF Scanner</h3>
+          <p>Lightning-fast document scans, auto-crop, OCR, and easy exporting.</p>
+          <a class="download" href="https://apps.apple.com/us/app/scan-max-pdf-document-scanner/id6745792574" target="_blank" rel="noopener">App Store</a>
+        </div>
+      </article>
+
+      <!-- Craft Addons & Mods for MCPE -->
+      <article class="app-card">
+        <img src="/assets/apps/craft-addons.jpg" alt="Craft Addons & Mods for MCPE app icon" class="app-thumb" loading="lazy">
+        <div class="app-body">
+          <h3>Craft Addons & Mods for MCPE</h3>
+          <p>Curated addons, shaders, maps, and skins—install to Minecraft PE in a tap.</p>
+          <a class="download" href="https://apps.apple.com/us/app/craft-addons-mods-for-mcpe/id6749162090" target="_blank" rel="noopener">App Store</a>
+        </div>
+      </article>
+
     </div>
   </section>
 
@@ -36,7 +79,7 @@
     <p>&copy; 2025 TheCrazyThings. All rights reserved.</p>
     <p>
       <a href="privacy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms & Conditions</a>
+      <a href="terms.html">Terms &amp; Conditions</a>
     </p>
   </footer>
 </body>
