--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TheCrazyThings – Best Mobile Apps</title>
-  <link rel="stylesheet" href="style.css" />
   <meta name="robots" content="index,follow" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -13,7 +13,7 @@
     <p>Innovative iOS apps built by TheCrazyThings</p>
     <div class="header-buttons">
       <!-- Keep ads.txt accessible but hidden from users -->
-      <a href="/app-ads.txt" class="sr-only" aria-hidden="true" tabindex="-1" rel="nofollow">app-ads.txt</a>
+      <a href="app-ads.txt" class="sr-only" aria-hidden="true" tabindex="-1" rel="nofollow">app-ads.txt</a>
       <a href="mailto:moukarrameabdellah@gmail.com" class="button">Contact Us</a>
     </div>
   </header>
@@ -24,7 +24,7 @@
 
       <!-- HomeDecor AI Interior Design -->
       <article class="app-card">
-        <img src="/assets/apps/homedecor-ai.jpg" alt="HomeDecor AI Interior Design app icon" class="app-thumb" loading="lazy">
+        <img src="assets/apps/homedecor-ai.jpg" alt="HomeDecor AI – Interior Design app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>HomeDecor AI – Interior Design</h3>
           <p>AI-powered interior design & room makeovers. Visualize renovations in seconds.</p>
@@ -34,7 +34,7 @@
 
       <!-- TV Smart Remote Control -->
       <article class="app-card">
-        <img src="/assets/apps/tv-remote.jpg" alt="TV Smart Remote Control app icon" class="app-thumb" loading="lazy">
+        <img src="assets/apps/tv-remote.jpg" alt="TV Smart Remote Control app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>TV Smart Remote Control</h3>
           <p>Control Roku, webOS, Tizen, Android TV & more from one simple remote.</p>
@@ -44,7 +44,7 @@
 
       <!-- Manga Reader Webtoon -->
       <article class="app-card">
-        <img src="/assets/apps/manga-reader.jpg" alt="Manga Reader Webtoon app icon" class="app-thumb" loading="lazy">
+        <img src="assets/apps/manga-reader.jpg" alt="Manga Reader – Webtoon app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>Manga Reader – Webtoon</h3>
           <p>Fast, clean manga reader with favorites, history, categories, and smart search.</p>
@@ -54,7 +54,7 @@
 
       <!-- Scan Max -->
       <article class="app-card">
-        <img src="/assets/apps/scan-max.jpg" alt="Scan Max – PDF Document Scanner app icon" class="app-thumb" loading="lazy">
+        <img src="assets/apps/scan-max.jpg" alt="Scan Max – PDF Document Scanner app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>Scan Max – PDF Scanner</h3>
           <p>Lightning-fast document scans, auto-crop, OCR, and easy exporting.</p>
@@ -64,7 +64,7 @@
 
       <!-- Craft Addons & Mods for MCPE -->
       <article class="app-card">
-        <img src="/assets/apps/craft-addons.jpg" alt="Craft Addons & Mods for MCPE app icon" class="app-thumb" loading="lazy">
+        <img src="assets/apps/craft-addons.jpg" alt="Craft Addons & Mods for MCPE app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>Craft Addons & Mods for MCPE</h3>
           <p>Curated addons, shaders, maps, and skins—install to Minecraft PE in a tap.</p>
