--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <h1>We Create the Best Mobile Apps</h1>
     <p>Innovative iOS apps built by TheCrazyThings</p>
     <div class="header-buttons">
-      <!-- Keep ads.txt accessible but hidden from users -->
-      <a href="app-ads.txt" class="sr-only" aria-hidden="true" tabindex="-1" rel="nofollow">app-ads.txt</a>
+      <!-- No visible link to app-ads.txt; keep the file at repo root -->
       <a href="mailto:moukarrameabdellah@gmail.com" class="button">Contact Us</a>
     </div>
   </header>
@@ -22,9 +21,7 @@
     <h2>Our Apps</h2>
     <div class="apps-grid">
 
-      <!-- HomeDecor AI Interior Design -->
       <article class="app-card">
-        <img src="assets/apps/homedecor-ai.jpg" alt="HomeDecor AI – Interior Design app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>HomeDecor AI – Interior Design</h3>
           <p>AI-powered interior design & room makeovers. Visualize renovations in seconds.</p>
@@ -32,9 +29,7 @@
         </div>
       </article>
 
-      <!-- TV Smart Remote Control -->
       <article class="app-card">
-        <img src="assets/apps/tv-remote.jpg" alt="TV Smart Remote Control app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>TV Smart Remote Control</h3>
           <p>Control Roku, webOS, Tizen, Android TV & more from one simple remote.</p>
@@ -42,9 +37,7 @@
         </div>
       </article>
 
-      <!-- Manga Reader Webtoon -->
       <article class="app-card">
-        <img src="assets/apps/manga-reader.jpg" alt="Manga Reader – Webtoon app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>Manga Reader – Webtoon</h3>
           <p>Fast, clean manga reader with favorites, history, categories, and smart search.</p>
@@ -52,19 +45,15 @@
         </div>
       </article>
 
-      <!-- Scan Max -->
       <article class="app-card">
-        <img src="assets/apps/scan-max.jpg" alt="Scan Max – PDF Document Scanner app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>Scan Max – PDF Scanner</h3>
-          <p>Lightning-fast document scans, auto-crop, OCR, and easy exporting.</p>
+        <p>Lightning-fast document scans, auto-crop, OCR, and easy exporting.</p>
           <a class="download" href="https://apps.apple.com/us/app/scan-max-pdf-document-scanner/id6745792574" target="_blank" rel="noopener">App Store</a>
         </div>
       </article>
 
-      <!-- Craft Addons & Mods for MCPE -->
       <article class="app-card">
-        <img src="assets/apps/craft-addons.jpg" alt="Craft Addons & Mods for MCPE app icon" class="app-thumb" loading="lazy">
         <div class="app-body">
           <h3>Craft Addons & Mods for MCPE</h3>
           <p>Curated addons, shaders, maps, and skins—install to Minecraft PE in a tap.</p>
