--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TheCrazyThings – Best Mobile Apps</title>
+  <title>Mouka Apps – Innovative Mobile Apps</title>
   <meta name="robots" content="index,follow" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <h1>We Create the Best Mobile Apps</h1>
-    <p>Innovative iOS apps built by TheCrazyThings</p>
+    <p>Innovative iOS apps built by Mouka Apps</p>
     <div class="header-buttons">
-      <!-- No visible link to app-ads.txt; keep the file at repo root -->
+      <!-- ads file hidden on purpose, but still accessible at /app-ads.txt -->
       <a href="mailto:moukarrameabdellah@gmail.com" class="button">Contact Us</a>
     </div>
   </header>
@@ -48,7 +48,7 @@
       <article class="app-card">
         <div class="app-body">
           <h3>Scan Max – PDF Scanner</h3>
-        <p>Lightning-fast document scans, auto-crop, OCR, and easy exporting.</p>
+          <p>Lightning-fast document scans, auto-crop, OCR, and easy exporting.</p>
           <a class="download" href="https://apps.apple.com/us/app/scan-max-pdf-document-scanner/id6745792574" target="_blank" rel="noopener">App Store</a>
         </div>
       </article>
@@ -65,7 +65,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 TheCrazyThings. All rights reserved.</p>
+    <p>&copy; 2025 Mouka Apps. All rights reserved.</p>
     <p>
       <a href="privacy.html">Privacy Policy</a> |
       <a href="terms.html">Terms &amp; Conditions</a>
